# pepita

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
.github/workflows/: build.yml
include/: chunk.h  common.h  debug.h  memory.h  value.h
src/: chunk.c  debug.c  main.c  memory.c  value.c
